overflow fix

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,6 +4,8 @@ html, body {
 }
 
 body {
+  overflow-x: hidden;
+  position: relative;
   font-family: "Noto Sans", sans-serif;
 }
 
